UI : add py video feedback + Starting zone
- start of a Refactor of the js
TODO : put nicely the video on the UI

--- a/server/WebUI/index.html
+++ b/server/WebUI/index.html
@@ -12,11 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <title>CDR Dashboard</title>
-    <script>
-        const host = "rc.local";
-        const port = 8080;
-        const user = "WebUI"
-    </script>
+    <script src="utils.js"></script>
 </head>
 
 <body>
@@ -24,7 +20,7 @@
         <a href="index.html" class="item_menu active"><i class="menu_icon icon"></i>Général</a>
         <a href="./page/map.html" class="item_menu"><i class="map_icon icon"></i>Map</a>
         <a href="./page/cam.html" class="item_menu"><i class="cam_icon icon"></i>Caméra</a>
-        <a href="index.html" class="item_menu"><i class="save_icon icon"></i>...</a>
+        <a href="./page/start.html" class="item_menu"><i class="save_icon icon"></i>Start</a>
     </div>
     <div class="log sushi">
         <div class="pilule">
