--- a/server/WebUI/index.html
+++ b/server/WebUI/index.html
@@ -42,6 +42,11 @@
             <i class="icon compass_icon"></i>
             Remote
         </div>
+        <div class="button_div">
+            <div class="button clear">Clear</div>
+            <div class="button reset">Reset</div>
+            <div class="button actionneurs">Toggle</div>
+        </div>
         <div class="make_center">
             <div class="dpad">
                         <div></div>
