Add NACK to actuators + debug

--- a/server/WebUI/index.html
+++ b/server/WebUI/index.html
@@ -21,6 +21,8 @@
         <a href="./page/map.html" class="item_menu"><i class="map_icon icon"></i>Map</a>
         <a href="./page/cam.html" class="item_menu"><i class="cam_icon icon"></i>Caméra</a>
         <a href="./page/start.html" class="item_menu"><i class="save_icon icon"></i>Start</a>
+        <a href="./page/settings.html" class="item_menu"><i class="settings_icon icon"></i>Settings</a>
+
     </div>
     <div class="log sushi">
         <div class="pilule">
